# ChangeLog for app-office/scribus
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.78 2006/04/10 12:09:36 hanno Exp $

*scribus-1.3.3.1 (10 Apr 2006)

  10 Apr 2006; Hanno Boeck <hanno@gentoo.org> +scribus-1.3.3.1.ebuild:
  Version bump and ebuild cleanup.

*scribus-1.3.3 (27 Mar 2006)

  27 Mar 2006; Hanno Boeck <hanno@gentoo.org> +scribus-1.3.3.ebuild:
  Version bump.

  15 Mar 2006; Patrick McLean <chutzpah@gentoo.org> scribus-1.2.4.1.ebuild:
  Stable on amd64 (bug #126244)

  09 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  scribus-1.2.4.1.ebuild:
  Stable on ppc.

  27 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  scribus-1.2.4.1.ebuild:
  Stable on sparc

  27 Feb 2006; Markus Rothe <corsair@gentoo.org> scribus-1.2.4.1.ebuild:
  Stable on ppc64

  25 Feb 2006; Mark Loeser <halcy0n@gentoo.org> scribus-1.2.4.1.ebuild:
  Stable on x86; bug #123808

*scribus-1.3.2-r1 (24 Jan 2006)

  24 Jan 2006; Hanno Boeck <hanno@gentoo.org>
  +files/scribus-1.3.2-fixes.diff, +scribus-1.3.2-r1.ebuild:
  Fix for cairo memleak and crash, re-added cairo flag.

*scribus-1.3.2 (23 Jan 2006)

  23 Jan 2006; Hanno Boeck <hanno@gentoo.org> +scribus-1.3.2.ebuild:
  Version bump.

*scribus-1.2.4.1 (12 Jan 2006)

  12 Jan 2006; Hanno Boeck <hanno@gentoo.org> +scribus-1.2.4.1.ebuild:
  Version bump.

*scribus-1.3.1-r1 (20 Dec 2005)

  20 Dec 2005; Hanno Boeck <hanno@gentoo.org>
  +files/scribus-1.3.1-gcc41.patch, +files/scribus-1.3.1-memleak.patch,
  +scribus-1.3.1-r1.ebuild:
  Fix memleak and compilation with gcc 4.1.

*scribus-1.3.1 (09 Oct 2005)

  09 Oct 2005; Hanno Boeck <hanno@gentoo.org> +scribus-1.3.1.ebuild:
  Development version, in package.mask, needs cairo 1.0 before unmasking.

  24 Sep 2005; Markus Rothe <corsair@gentoo.org> scribus-1.2.2.1.ebuild:
  Stable on ppc64

  17 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  scribus-1.2.2.1.ebuild:
  Stable on ppc.
