@@ -1,0 +1,3 @@
+MD5 fa5d0dbb675b41f3d56823943b06c84c scribus-1.3.3.2.tar.bz2 11404358
+RMD160 a76d3df6a69de88435e115b981c0d784a1f3e81f scribus-1.3.3.2.tar.bz2 11404358
+SHA256 9594487d16eeabaa381e8479450dbf9680a6dd9bde53c6a71ff4cf9adff0245c scribus-1.3.3.2.tar.bz2 11404358
