@@ -1,6 +1,11 @@
 # ChangeLog for app-office/scribus
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.78 2006/04/10 12:09:36 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.79 2006/06/02 00:40:02 hanno Exp $
+
+*scribus-1.3.3.2 (02 Jun 2006)
+
+  02 Jun 2006; Hanno Boeck <hanno@gentoo.org> +scribus-1.3.3.2.ebuild:
+  Version bump.
 
 *scribus-1.3.3.1 (10 Apr 2006)
 
